# osaa-unga-analysis

./: .deployment  .dockerignore  .gitignore  .pre-commit-config.yaml  AZURE_DEPLOYMENT.md  AZURE_DEPLOYMENT_FINAL.md  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_NEW.md  Bangladesh_Gender_Analysis_Response.md  CLEANUP_AND_REFACTORING_SUMMARY.md  CLEANUP_SUMMARY.md  Dockerfile  Final_Response_Bangladesh_Gender_Analysis.md  LICENSE  MANIFEST.in  MODULARIZATION.md  OSAA_UNGA_Analysis_App_Presentation.html  QUICK_START.md  RAG_System_Explanation_Slides.html  README.md  README_NEW.md  SEARCH_ENHANCEMENTS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_SUMMARY.md  UI_UX_IMPROVEMENTS_SUMMARY.md  ULTIMATE_DEMO_GUIDE.md  UNGA_Database_Search_Demo.md  UNGA_Database_Search_Demo.pptx  analysis.py  app-simple.py  app.py  app_backup.py  app_enterprise.py  app_modular.py  app_new.py  app_professional.py  auth.py  azure-deploy-clean.sh  (+39 more)
artifacts/Session 80 - 2025/Session 80 - 2025/: ARE_80_2025.txt  AUT_80_2025.txt  BEL_80_2025.txt  BEN_80_2025.txt  BFA_80_2025.txt  BLZ_80_2025.txt  COG_80_2025.txt  CYP_80_2025.txt  CZE_80_2025.txt  DMA_80_2025.txt  DNK_80_2025.txt  DOM_80_2025.txt  DZA_80_2025.txt  EGY_80_2025.txt  EST_80_2025.txt  FJI_80_2025.txt  FSM_80_2025.txt  GEO_80_2025.txt  GIN_80_2025.txt  GNB_80_2025.txt  GNQ_80_2025.txt  GUY_80_2025.txt  IRQ_80_2025.txt  ISL_80_2025.txt  JOR_80_2025.txt  KEN_80_2025.txt  LBN_80_2025.txt  LCA_80_2025.txt  LVA_80_2025.txt  MDA_80_2025.txt  MKD_80_2025.txt  MLT_80_2025.txt  NER_80_2025.txt  NRU_80_2025.txt  PAK_80_2025.txt  PHL_80_2025.txt  PSE_80_2025.txt  SVN_80_2025.txt  SWE_80_2025.txt  SWZ_80_2025.txt  (+6 more)
artifacts/logo/Session 80 - 2025/: AGO_80_2025.txt  ALB_80_2025.txt  ARG_80_2025.txt  ATG_80_2025.txt  AUS_80_2025.txt  AZE_80_2025.txt  BDI_80_2025.txt  BGR_80_2025.txt  BHR_80_2025.txt  BHS_80_2025.txt  BLR_80_2025.txt  BRB_80_2025.txt  BRN_80_2025.txt  BTN_80_2025.txt  BWA_80_2025.txt  CAF_80_2025.txt  CHE_80_2025.txt  CHL_80_2025.txt  CHN_80_2025.txt  CIV_80_2025.txt  CMR_80_2025.txt  COD_80_2025.txt  COM_80_2025.txt  CPV_80_2025.txt  CUB_80_2025.txt  ECU_80_2025.txt  ERI_80_2025.txt  FIN_80_2025.txt  FRA_80_2025.txt  GAB_80_2025.txt  GBR_80_2025.txt  GMB_80_2025.txt  GRC_80_2025.txt  GTM_80_2025.txt  HRV_80_2025.txt  IDN_80_2025.txt  IND_80_2025.txt  IRL_80_2025.txt  ISR_80_2025.txt  ITA_80_2025.txt  (+70 more)
docs/: API.md  DEPLOYMENT.md  LOGGING.md  README.md
scripts/: azure-deploy.sh
src/: __init__.py  app.py
src/config/: settings.py
src/core/security/: __init__.py  authentication.py  (+2 more)
src/unga_analysis/: __init__.py  main.py
tabs/: __init__.py  cross_year_analysis_tab.py
tests/: __init__.py  conftest.py  test_core.py  test_main.py
unga_platform/: main.py
unga_platform/infrastructure/: dependency_injection.py
unga_platform/ui/: streamlit_app.py
(+68 files in other folders)
